Replaced old style collections creating with new List.of()/Set.of()/Map.of()
WARNING: this type of changes was made and can be made only on unmodifiable collections
BENEFITS:
1. Internal protected data. Example: LayerGeneratingProcessor.getSupportedAnnotationTypes() and similar return unmodifiable collections to protect content
2. IDE side visual highlighting for values duplicates (for set/map)
3. Less required imports
4. Less mem usage
5. Shortest form, for example:
Collections.unmodifiableSet(new HashSet<String>(Arrays.asList(new String[] {...
this line might be replaced by Set.of()