@@ -96,7 +96,7 @@ import org.openide.util.WeakListeners;
 
 public class ToolTipAnnotation extends Annotation implements Runnable {
 
-    private static final Set<String> JAVA_KEYWORDS = new HashSet<String>(Arrays.asList(new String[] {
+    private static final Set<String> JAVA_KEYWORDS = Set.of(
         "abstract",     "continue",     "for",          "new",  	"switch",
         "assert", 	"default", 	"goto", 	"package", 	"synchronized",
         "boolean", 	"do",           "if",           "private", 	/*"this",*/
@@ -106,8 +106,8 @@ public class ToolTipAnnotation extends Annotation implements Runnable {
         "catch",        "extends", 	"int",          "short", 	"try",
         "char",         "final", 	"interface", 	"static", 	"void",
         /*"class",*/    "finally", 	"long", 	"strictfp", 	"volatile",
-        "const",        "float", 	"native", 	"super", 	"while",
-    }));
+        "const",        "float", 	"native", 	"super", 	"while"
+    );
 
     private static final int MAX_STRING_LENGTH;
 
