@@ -53,8 +53,10 @@ import org.openide.util.NbBundle;
  */
 public class AddConstructor implements ErrorRule<Void> {
 
-    private static final Set<String> ERROR_CODES = new HashSet<String>(Arrays.asList(
-            "compiler.err.cant.apply.symbol", "compiler.err.cant.apply.symbols")); // NOI18N
+    private static final Set<String> ERROR_CODES = Set.of(
+            "compiler.err.cant.apply.symbol",
+            "compiler.err.cant.apply.symbols"
+    ); // NOI18N
     
     @Override
     public Set<String> getCodes() {
