@@ -49,10 +49,10 @@ import org.openide.util.NbBundle;
  */
 public class ChangeMethodReturnType implements ErrorRule<Void> {
 
-    private static final Set<String> CODES = new HashSet<String>(Arrays.asList(
+    private static final Set<String> CODES = Set.of(
             "compiler.err.cant.ret.val.from.meth.decl.void",
             "compiler.err.prob.found.req"
-    ));
+    );
 
     @Override
     public Set<String> getCodes() {
