@@ -74,11 +74,11 @@ public final class J2SELibraryTypeProvider implements LibraryTypeProvider {
         VOLUME_TYPE_MAVEN_POM
     };
 
-    private static final Set<String> VOLUME_TYPES_REQUIRING_FOLDER = new HashSet<String>(Arrays.asList(new String[] {
+    private static final Set<String> VOLUME_TYPES_REQUIRING_FOLDER = Set.of(
         VOLUME_TYPE_CLASSPATH,
         VOLUME_TYPE_SRC,
-        VOLUME_TYPE_JAVADOC,
-    }));
+        VOLUME_TYPE_JAVADOC
+    );
 
     @Override
     public String getLibraryType() {
