@@ -86,11 +86,11 @@ public abstract class CompileWorkerTestBase extends NbTestCase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
         
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test1.sig",
-                                                       "cache/s1/java/15/classes/test/Test1a.sig",
-                                                       "cache/s1/java/15/classes/test/Test2.sig",
-                                                       "cache/s1/java/15/classes/test/Test2a.sig")),
-                     createdFiles);
+        assertEquals(Set.of("cache/s1/java/15/classes/test/Test1.sig",
+                        "cache/s1/java/15/classes/test/Test1a.sig",
+                        "cache/s1/java/15/classes/test/Test2.sig",
+                        "cache/s1/java/15/classes/test/Test2a.sig"),
+                createdFiles);
         assertFalse(ErrorsCache.isInError(getRoot(), true));
     }
 
@@ -108,8 +108,7 @@ public abstract class CompileWorkerTestBase extends NbTestCase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
-                     createdFiles);
+        assertEquals(Set.of("cache/s1/java/15/classes/test/Test.sig"), createdFiles);
         assertFalse(ErrorsCache.isInError(getRoot(), false));
 
         JavaSource js = JavaSource.forFileObject(src.getFileObject("test/Test.java"));
