@@ -37,7 +37,7 @@ public class TplSyntax {
     /**
      * List of all tags which introduce block of code.
      */
-    public static final Set<String> BLOCK_TAGS = Collections.unmodifiableSet(new HashSet<String>(Arrays.asList(
+    public static final Set<String> BLOCK_TAGS = Set.of(
             "block", //NOI18N
             "capture", //NOI18N
             "for", //NOI18N
@@ -50,25 +50,25 @@ public class TplSyntax {
             "section", //NOI18N
             "setfilter", //NOI18N
             "strip", //NOI18N
-            "while"))); //NOI18N
+            "while"
+    ); //NOI18N
     /**
      * List of all tags which are else-typed.
      */
-    public static final Set<String> ELSE_TAGS = Collections.unmodifiableSet(new HashSet<String>(Arrays.asList(
+    public static final Set<String> ELSE_TAGS = Set.of(
             "foreachelse", //NOI18N
             "elseif", //NOI18N
             "else", //NOI18N
-            "sectionelse"))); //NOI18N
+            "sectionelse"
+    ); //NOI18N
     /**
      * Mapping of non-else tag to else-like tags. To every else tag must correspond at least one normal tag.
      */
-    public static final Map<String, Set<String>> RELATED_TAGS = Collections.unmodifiableMap(new HashMap<String, Set<String>>() {
-        {
-            put("if", new HashSet<String>(Arrays.asList("else", "elseif"))); //NOI18N
-            put("foreach", new HashSet<String>(Arrays.asList("foreachelse"))); //NOI18N
-            put("section", new HashSet<String>(Arrays.asList("sectionelse"))); //NOI18N
-        }
-    });
+    public static final Map<String, Set<String>> RELATED_TAGS = Map.of(
+            "if", Set.of("else", "elseif"), //NOI18N
+            "foreach", Set.of("foreachelse"), //NOI18N
+            "section", Set.of("sectionelse") //NOI18N
+    );
 
     /**
      * Gets information whether the given command is block command.
